omni/tests/goldens/types/undefined_ident_21.err
tests/goldens/types/undefined_ident_21.omni:1:20: error: undefined identifier "missing21"
  let result21:int = missing21
                     ^~~ hint: declare the variable with 'let missing21: <type> = <value>' or 'var missing21: <type> = <value>' before using it
