omni/tests/goldens/types/undefined_ident_21.omni
let result21:int = missing21
